--- a/index.css
+++ b/index.css
@@ -3,7 +3,7 @@ body{
     margin-left:7%;
     margin-right: 10%;
 }
-h1,h2{
+h1{
     color:blue;
     text-align: center;
     stroke-opacity: calc();
