--- a/index.css
+++ b/index.css
@@ -4,11 +4,12 @@ body{
     margin-right: 10%;
     background-attachment: fixed;
 }
-h1{
+#header{
     font-size: 50px;
     color:blue;
     stroke-opacity: calc();
     text-shadow:aqua 2px 2px 2px,aqua -2px -2px 2px;
+    font-weight: bolder;
 }
 a{
     color: crimson;
